--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $ff-head-i: 'Pacifico', cursive;
 
 $clr-blue: #0e80e9;
 $clr-blue-dark: #0663b9;
+$clr-gray: #555;
 $clr-black: #000;
 $clr-white: #fff;
 
