--- a/src/components/displayBox/_displayBox.scss
+++ b/src/components/displayBox/_displayBox.scss
@@ -1,19 +1,8 @@
 .display-box {
+	text-align: center;
+	padding: 1rem;
+	font-size: 3.5rem;
+	font-family: $ff-comic;
+	letter-spacing: 1.5px;
 	display: block;
-	background: $clr-white;
-	margin: 0.5rem auto;
-	width: 500px;
-	height: 200px;
-	border: 2px solid $clr-black;
-	border-radius: 8px;
-	padding: 0.5rem 0.8rem;
-	font-family: $ff-main;
-	font-size: 0.8rem;
-	outline: none;
-}
-
-::placeholder {
-	font-family: $ff-main;
-	color: $clr-gray;
-	text-transform: capitalize;
 }
