--- a/src/components/textForm/_textForm.scss
+++ b/src/components/textForm/_textForm.scss
@@ -28,6 +28,7 @@
 		font-weight: bold;
 		color: $clr-white;
 		border: none;
+		outline: none;
 		padding: 0.5rem 2rem;
 		border-radius: 5rem;
 		margin: 1rem 0;
