--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Pacifico');
+@import url('https://fonts.googleapis.com/css?family=Gochi+Hand');
