--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 $ff-main: 'Montserrat', sans-serif;
 $ff-head-i: 'Pacifico', cursive;
+$ff-comic: 'Gochi Hand', cursive;
 
 $clr-blue: #0e80e9;
 $clr-blue-dark: #0663b9;
